html/css/style.css
/* Datatables, provided by https://github.com/babslgam*/

body {
    background: url(../img/bg_1.jpg) 0 0 repeat;
}

div.dataTables_filter {
  text-align: left !important;
}

li {
    list-style: none;
}

.btn-link {
  font-size:20px;
}

.exportbuttons {
  text-align: right;
}

.navbar {
    border-bottom: 5px solid #ab1923 !important;
}

.dataTables_info {
  text-align: center;
}

.filters input {
  width:100%;
  padding: 3px;
  box-sizing: border-box;
}

.dataTables_wrapper table {
  width:100%;
}

#leaflet-map-one {
    height: 400px;
    border-radius: .25em;
    z-index: 1;
}

/* datatable alphanumeric search
 * https://datatables.net/forums/discussion/30032/alphabetical-filter#Comment_80476
 * */

 div.alphabet {
    position: relative;
    display: table;
    width: 100%;
    margin-bottom: 1em;
}
 
div.alphabet span {
    display: table-cell;
    color: #444;
    cursor: pointer;
    text-align: center;
    width: 2.5%;
}
 
div.alphabet span:hover {
    text-decoration: underline;
}
 
div.alphabet span.active {
    color: #ab1923;
}
 
div.alphabet span.empty {
    color: #f1f1f1;
}
 
div.alphabetInfo {
    display: block;
    position: absolute;
    background-color: #111;
    border-radius: 3px;
    color: white;
    top: 2em;
    height: 1.8em;
    padding-top: 0.4em;
    text-align: center;
    z-index: 1;
}

/**** Font Aweseome ***/
.far {
    font-family: "Font Awesome 5 Free" !important;
}

.img-fluid {
    max-width: 160% !important;
    max-height: 160% !important;
}

.card {
    margin-top: 3em;
    border-top: 3px solid #ab1923; 
    box-shadow: 4px 4px 9px 0 rgba(0, 0, 0, .1);
}

p.fade {
    display: none;
}

p.active {
    display: block;
}

.index-card {
    margin-top: 2em;
    border-top: none; 
    transition: transform .2s;
    text-align: center;
}

.index-card:hover {
    transform: scale(1.02);
}

.index-link:hover {
    text-decoration: none !important;
}

.btn-round {
    border: 1px solid white;
}

.btn-round:hover {
    background-color: #fff !important;
}

.btn-round a {
    color: white;
}

.btn-round a:hover {
    color: #444;
}

.info-box-link {
    border-bottom: none;
    padding: 2em 0;
}

.info-box-link .nav-item .nav-link.active {
    border: 1px solid rgba(0, 0, 0, .1) !important;
    border-radius: .5rem;
}



a {
    color: #ab1923;
}

p {
    display: block;
}

.nav-tabs .nav-link.active {
    border-top: 2px solid rgba(0,0,0,.03);
    border-left: 2px solid rgba(0,0,0,.03);
    border-right: 2px solid rgba(0,0,0,.03);
    border-radius: .5rem .5rem 0 0;
    margin-bottom: -2px;
}

.nav-tabs .nav-link:hover {
    color: #444;
}

.img-notes {
    display:inline-block;
    border:1px solid lightgrey;
    padding:.2em;
    border-radius:.25rem;
    transition: transform .2s;    
}

.img-notes:hover {
    transform: scale(1.05);
}

legend .img-notes {
    display: block;
    border: none;
    padding:.2em;
    border-radius:.25rem;
    transition: transform .2s;
}

legend .img-notes:hover {
    transform: scale(1.01);
}

.tei-xml-images {
    width:100px;
    height:100px;
    max-width:100%;
    max-height:100%;
}

.table.info-box tr th {
    border: none;
    border-right: 1px solid rgba(0,0,0,.1);
    width: 30%;
}

.table.info-box tr td {
    border: none;
}

.badge {
    background-color: #ab1923;
}

.carousel-indicators {
    cursor: pointer;
}

.container-fluid {
    max-width: 1024px;
}

/* staticSearch */

span.ssQueryAndButton {
    margin: 2em auto 0.25em auto;
    max-width: 50%;
    width: 50%;
}

input#ssQuery {
    font-size: .9rem;
    border-radius: .25rem;
    padding: .3rem 1.75rem .3rem .75rem;
    border: 1px solid rgba(38, 35, 37, 0.075);
    background-color: #fff;
    color: rgba(0,0,0,.9);
}

input#ssQuery:hover {
    border: 1px solid #b59890;
}

button#ssDoSearch {
    border: 0;
    padding: 0 ;
    background: 0 0;
    cursor: pointer;
    color: rgba(38, 35, 37, 0.6);
    margin-left: -4.1em;
    margin-right: -.25em;
    margin-top: .1em;
    z-index:99;
}

form button svg {
    color: #b59890;
}

form button svg:hover {
    color: #615a60;
}

li > label {
    text-transform:capitalize !important;
    margin-left: .5em !important;
}

.filters input {
    width:100%;
    padding: 3px;
    box-sizing: border-box;
  }

.navbar-search-icon {
    margin-top: .3em;
}

#ac-select-all:hover, #searchInfoModalButton svg:hover {
    color: #b59890;
    cursor: pointer;
}

#ssDoSearch2, #ssClear, #ssShowMore, #ssShowAll {
    border: 1px solid #ab1923;
    border-radius: .25rem;
    margin-bottom: 2em;
    padding: .1em .8em;
    background-color: transparent;
    color: #000;
}

#ssDoSearch2:hover, #ssClear:hover, #ssShowMore:hover, #ssShowAll:hover {
    background-color: #ab1923;
    color: #fff;
    border: 1px solid #fff;
}

fieldset.ssFieldset > span {
    background-color: #ab1923;
    border: 1px solid #fff;
    border-radius: .25rem;
}

fieldset.ssFieldset > span > input {
    border: 1px solid #ab1923;
    border-radius: .25rem;
    margin-left: .3em;
}

/* Hide scrollbar for Chrome, Safari and Opera */
#ac-panel::-webkit-scrollbar {
  display: none !important;
}

/* Hide scrollbar for IE, Edge and Firefox */
#ac-panel {
    display:block;
    position:absolute;
    min-height:50px;
    max-height:200px;
    overflow:scroll;
    margin: 4.5em 24%;
    max-width: 50%;
    width: 50% ;
    font-size: .9rem;
    border-radius: 0 0 .25rem .25rem ;
    padding: 0.3rem;    
    color: rgba(0,0,0,.9);
    -ms-overflow-style: none;  /* IE and Edge */
}

.ac-border {
    background-color: rgba(38, 35, 37, 0.075);
    border: 1px solid rgba(38, 35, 37, 0.075) !important;
    border-top: 3px solid rgba(38, 35, 37, 0.075) !important;
}

.ac-border2 {
    border: 1px solid rgba(38, 35, 37, 0.075) !important;
    border-bottom: 3px solid rgba(38, 35, 37, 0.075) !important;
    border-radius: .25rem .25rem 0 0 !important;
}

.stem {
    padding: .3em;
    cursor: pointer;
}

.stem:hover {
    background-color: rgba(38, 35, 37, 0.3);
    border-radius: .25rem;
}

/* ssSearch Filter changes */

div.ssDescFilters fieldset {
    margin: 0;
    padding: 0;
}

div.ssDescFilters fieldset legend {
    border: 1px solid rgba(0, 0, 0, .1);
    border-radius: .25rem;
    font-size: 1em;
    padding: .5em;
    cursor: pointer;
}

div.ssDescFilters fieldset legend:hover {
    border: 1px solid #ab1923;
}

div.ssDescFilters fieldset legend div {
    width: 50%;
    display: inline-block;
}

.lsvg {
    text-align: right;
    padding-top:.4em;
    /*transition: transform .2s;*/
    color: #ab1923;
}

.ltxt {
    text-align: left;  
    color: #ab1923;
}

div.ssDescFilters fieldset {
    display:block !important;
    width: 100%;
    max-width: 100%;
}

ul.ssDescCheckboxList {
    max-height: 100% !important;
    overflow-y: auto;
    padding-left: .5em;
}

ul.ssDescCheckboxList li {
    display: inline-block;
    width: 33%;
    max-width: 33%;    
}

.ssDescCheckboxList li label {
    margin-left: .5em;
    max-width: 90%;
}

/* comparison */

.fa-clone {
    color: #000;
    cursor: pointer;
}

.fa-clone:hover {
    color: #ab1923;
}


.compare-placeholder {
    padding: 5em;
    margin: .1em auto;
    text-align: center;
}

li h6 {
    margin-top: 1em;
}

.loader {
    border: 16px solid #f3f3f3; /* Light grey */
    border-top: 16px solid #3498db; /* Blue */
    border-radius: 50%;
    width: 120px;
    height: 120px;
    animation: spin 2s linear infinite;
}

@keyframes spin {
    0% { transform: rotate(0deg); }
    100% { transform: rotate(360deg); }
}


/* Footer */

#github-logo {
    width: 10%;
    height: auto;
    padding: 10px 0 10px 0;
    transition: transform .2s;
    margin-left: 1em;
}

#github-logo:hover {
    transform: scale(1.05);
}

